Bug 186036 - plasma "fatal error occurred" signal 11 krunner
Summary: plasma "fatal error occurred" signal 11 krunner
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-03 13:26 UTC by Nathan Ogden
Modified: 2009-03-29 21:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nathan Ogden 2009-03-03 13:26:57 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    SuSE RPMs

Backtrace:

Application: Run Command Interface (krunner), signal SIGSEGV
[?1034h[Thread debugging using libthread_db enabled]
0x00007fb0fda5fce1 in nanosleep () from /lib64/libc.so.6
[Current thread is 1 (Thread 0x7fb10304a750 (LWP 3546))]

Thread 6 (Thread 0x7fb0e2512950 (LWP 3855)):
#0  0x00007fb100626d59 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fb100897f29 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQtCore.so.4
#2  0x00007fb101fd3644 in ?? () from /usr/lib64/libthreadweaver.so.4
#3  0x00007fb101fd5da3 in ?? () from /usr/lib64/libthreadweaver.so.4
#4  0x00007fb101fd436f in ?? () from /usr/lib64/libthreadweaver.so.4
#5  0x00007fb101fd47c9 in ThreadWeaver::Thread::run() () from /usr/lib64/libthreadweaver.so.4
#6  0x00007fb100896f72 in ?? () from /usr/lib64/libQtCore.so.4
#7  0x00007fb100623070 in start_thread () from /lib64/libpthread.so.0
#8  0x00007fb0fda910ed in clone () from /lib64/libc.so.6
#9  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7fb0e1d11950 (LWP 3856)):
#0  0x00007fb100626d59 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fb100897f29 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQtCore.so.4
#2  0x00007fb101fd3644 in ?? () from /usr/lib64/libthreadweaver.so.4
#3  0x00007fb101fd5da3 in ?? () from /usr/lib64/libthreadweaver.so.4
#4  0x00007fb101fd436f in ?? () from /usr/lib64/libthreadweaver.so.4
#5  0x00007fb101fd47c9 in ThreadWeaver::Thread::run() () from /usr/lib64/libthreadweaver.so.4
#6  0x00007fb100896f72 in ?? () from /usr/lib64/libQtCore.so.4
#7  0x00007fb100623070 in start_thread () from /lib64/libpthread.so.0
#8  0x00007fb0fda910ed in clone () from /lib64/libc.so.6
#9  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fb0e1510950 (LWP 3857)):
#0  0x00007fb100626d59 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fb100897f29 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQtCore.so.4
#2  0x00007fb101fd3644 in ?? () from /usr/lib64/libthreadweaver.so.4
#3  0x00007fb101fd5da3 in ?? () from /usr/lib64/libthreadweaver.so.4
#4  0x00007fb101fd436f in ?? () from /usr/lib64/libthreadweaver.so.4
#5  0x00007fb101fd47c9 in ThreadWeaver::Thread::run() () from /usr/lib64/libthreadweaver.so.4
#6  0x00007fb100896f72 in ?? () from /usr/lib64/libQtCore.so.4
#7  0x00007fb100623070 in start_thread () from /lib64/libpthread.so.0
#8  0x00007fb0fda910ed in clone () from /lib64/libc.so.6
#9  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fb0e0d0f950 (LWP 3858)):
#0  0x00007fb100626d59 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fb100897f29 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQtCore.so.4
#2  0x00007fb101fd3644 in ?? () from /usr/lib64/libthreadweaver.so.4
#3  0x00007fb101fd5da3 in ?? () from /usr/lib64/libthreadweaver.so.4
#4  0x00007fb101fd436f in ?? () from /usr/lib64/libthreadweaver.so.4
#5  0x00007fb101fd47c9 in ThreadWeaver::Thread::run() () from /usr/lib64/libthreadweaver.so.4
#6  0x00007fb100896f72 in ?? () from /usr/lib64/libQtCore.so.4
#7  0x00007fb100623070 in start_thread () from /lib64/libpthread.so.0
#8  0x00007fb0fda910ed in clone () from /lib64/libc.so.6
#9  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fb0e050e950 (LWP 24227)):
#0  0x00007fb0fda8a642 in select () from /lib64/libc.so.6
#1  0x00007fb10095e546 in ?? () from /usr/lib64/libQtCore.so.4
#2  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fb10304a750 (LWP 3546)):
[KCrash Handler]
#5  0x00007fb1010cd11a in KShell::splitArgs(QString const&, QFlags<KShell::Option>, KShell::Errors*) () from /usr/lib64/libkdecore.so.5
#6  0x00007fb0fd670c3b in KRun::binaryName(QString const&, bool) () from /usr/lib64/libkio.so.5
#7  0x00007fb0fd673578 in KRun::runCommand(QString const&, QString const&, QString const&, QWidget*, QByteArray const&) () from /usr/lib64/libkio.so.5
#8  0x00007fb0fd6736a5 in KRun::runCommand(QString const&, QWidget*) () from /usr/lib64/libkio.so.5
#9  0x00007fb0e3ae5e05 in ShellRunner::run (this=0x9867b0, context=@0x709ee0, match=<value optimized out>) at /usr/src/debug/kdebase-workspace-4.2.0/plasma/runners/shell/shellrunner.cpp:89
#10 0x00007fb1022dcbeb in Plasma::RunnerManager::run(Plasma::QueryMatch const&) () from /usr/lib64/libplasma.so.3
#11 0x00007fb102c49de1 in Interface::run (this=0x726cd0, item=0xa37210) at /usr/src/debug/kdebase-workspace-4.2.0/krunner/interfaces/default/interface.cpp:418
#12 0x00007fb102c4a0f8 in Interface::qt_metacall (this=0x726cd0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x80ff0b089cc0)
    at /usr/src/debug/kdebase-workspace-4.2.0/build/krunner/interface.moc:88
#13 0x00007fb100995912 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#14 0x00007fb1018339b8 in KComboBox::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkdeui.so.5
#15 0x00007fb101845655 in KHistoryComboBox::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkdeui.so.5
#16 0x00007fb100995912 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQtCore.so.4
#17 0x00007fb0fffc4986 in QLineEdit::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libQtGui.so.4
#18 0x00000000007e42e0 in ?? ()
#19 0x00007fff0b089fa0 in ?? ()
#20 0x0000000000af7930 in ?? ()
#21 0x00007fff0b08ac90 in ?? ()
#22 0x00007fff0b089f20 in ?? ()
#23 0x0000000000000005 in ?? ()
#24 0x00000000007e42e0 in ?? ()
#25 0x00007fff0b089fa0 in ?? ()
#26 0x00007fb0fda33d3d in ?? () from /lib64/libc.so.6
#27 0x00007fff0b08ac90 in ?? ()
#28 0x00007fff0b089f20 in ?? ()
#29 0x0000000000000005 in ?? ()
#30 0x00000000007e42e0 in ?? ()
#31 0x00007fb10185094f in KLineEdit::keyPressEvent(QKeyEvent*) () from /usr/lib64/libkdeui.so.5
#32 0x00007fb0ffc33e68 in QWidget::setIcon(QPixmap const&) () from /usr/lib64/libQtGui.so.4
#33 0x0000000000603770 in ?? ()
#34 0x000000000078ade0 in ?? ()
#35 0x00000000fda35f07 in ?? ()
#36 0x00000000007b3690 in ?? ()
#37 0x0000000100000034 in ?? ()
#38 0x0000000000a79280 in ?? ()
#39 0x0000000000000040 in ?? ()
#40 0x00000000006037c8 in ?? ()
#41 0x0000000000000028 in ?? ()
#42 0x0000000000000000 in ?? ()
Comment 1 Dario Andres 2009-03-04 14:21:26 UTC
Do you remember what query/command where you typing when the crash ocurred ? 

If you can reproduce the crash at will, may you read http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports and post a complete backtrace here? 

You may need to install the "kdebase-workspace-debuginfo" package.

Thanks :)
Comment 2 Nathan Ogden 2009-03-04 20:20:15 UTC
(In reply to comment #1)
> Do you remember what query/command where you typing when the crash ocurred ? 
> 
> If you can reproduce the crash at will, may you read
> http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports
> and post a complete backtrace here? 

Sorry about not putting that info in. This crash has not happened very often. If I remember correctly, all I did was "Alt + F2" to get the crash notification.


> You may need to install the "kdebase-workspace-debuginfo" package.

I have kdebase4-workspace-debuginfo installed. (Running openSUSE 11.1 KDE 4.2 64-bit)

Before I installed it, the crash report said it did not have proper backtrace symbols. Now, it acted as though the backtrace was okay. If the backtrace I submitted is not sufficient I need further instructions since I don't know what else to do.
Comment 3 Dario Andres 2009-03-06 13:06:41 UTC
Sorry, you need "kdelibs5-debuginfo" too. Thanks
Comment 4 Nathan Ogden 2009-03-06 14:37:08 UTC
(In reply to comment #3)
> Sorry, you need "kdelibs5-debuginfo" too. Thanks

I am guessing 5 s/b 4? I will install kdelibs4-debuginfo.
Comment 5 Dario Andres 2009-03-06 14:38:55 UTC
Yes. that one. Ubuntu/Debian use "kdelibs5" for kdelibs@KDE4. So I'm already confused :P
Comment 6 Jonathan Thomas 2009-03-10 18:28:51 UTC
Here's a backtrace we got at Kubuntu that looks very similar. (It also has more debugging symbols)

Anwendung: Oberfläche zur Ausführung von Befehlen (krunner), Signal SIGSEGV
 [Current thread is 0 (LWP 8404)]
Thread 6 (Thread 0xa9d19b90 (LWP 8639)):
 #0 0xb800a430 in __kernel_vsyscall ()
 #1 0xb57d8075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
 #2 0xb68adbbd in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
 #3 0xb6be16f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
 #4 0xb7d61148 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x8bc7180, th=0x8ae10a0) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:365
 #5 0xb7d63eec in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x8bbe6d0, th=0x8ae10a0) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WorkingHardState.cpp:80
 #6 0xb7d5fd2b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x8bc7180, th=0x8ae10a0) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:356
 #7 0xb7d63fea in ThreadWeaver::WorkingHardState::applyForWork (this=0x8bbe6d0, th=0x8ae10a0) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WorkingHardState.cpp:71
 #8 0xb7d616d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8bc7180, th=0x8ae10a0, previous=0x8df4e70) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:351
 #9 0xb7d61fbe in ThreadWeaver::ThreadRunHelper::run (this=0xa9d19370, parent=0x8bc7180, th=0x8ae10a0) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/Thread.cpp:87
 #10 0xb7d625fb in ThreadWeaver::Thread::run (this=0x8ae10a0) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/Thread.cpp:142
 #11 0xb6be06ae in ?? () from /usr/lib/libQtCore.so.4
 #12 0xb57d450f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
 #13 0xb689fa0e in clone () from /lib/tls/i686/cmov/libc.so.6
Thread 5 (Thread 0xa93ffb90 (LWP 8640)):
 #0 0xb800a430 in __kernel_vsyscall ()
 #1 0xb57d8075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
 #2 0xb68adbbd in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
 #3 0xb6be16f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
 #4 0xb7d61148 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x8bc7180, th=0xa9400480) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:365
 #5 0xb7d63eec in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x8bbe6d0, th=0xa9400480) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WorkingHardState.cpp:80
 #6 0xb7d5fd2b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x8bc7180, th=0xa9400480) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:356
 #7 0xb7d63fea in ThreadWeaver::WorkingHardState::applyForWork (this=0x8bbe6d0, th=0xa9400480) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WorkingHardState.cpp:71
 #8 0xb7d616d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8bc7180, th=0xa9400480, previous=0x0) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:351
 #9 0xb7d64009 in ThreadWeaver::WorkingHardState::applyForWork (this=0x8bbe6d0, th=0xa9400480) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WorkingHardState.cpp:74
 #10 0xb7d616d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8bc7180, th=0xa9400480, previous=0x8d76258) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:351
 #11 0xb7d61fbe in ThreadWeaver::ThreadRunHelper::run (this=0xa93ff370, parent=0x8bc7180, th=0xa9400480) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/Thread.cpp:87
 #12 0xb7d625fb in ThreadWeaver::Thread::run (this=0xa9400480) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/Thread.cpp:142
 #13 0xb6be06ae in ?? () from /usr/lib/libQtCore.so.4
 #14 0xb57d450f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
 #15 0xb689fa0e in clone () from /lib/tls/i686/cmov/libc.so.6
Thread 4 (Thread 0xa8bfeb90 (LWP 8641)):
 #0 0xb800a430 in __kernel_vsyscall ()
 #1 0xb57d8075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
 #2 0xb68adbbd in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
 #3 0xb6be16f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
 #4 0xb7d61148 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x8bc7180, th=0x8d75e20) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:365
 #5 0xb7d63eec in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x8bbe6d0, th=0x8d75e20) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WorkingHardState.cpp:80
 #6 0xb7d5fd2b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x8bc7180, th=0x8d75e20) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:356
 #7 0xb7d63fea in ThreadWeaver::WorkingHardState::applyForWork (this=0x8bbe6d0, th=0x8d75e20) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WorkingHardState.cpp:71
 #8 0xb7d616d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8bc7180, th=0x8d75e20, previous=0x0) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:351
 #9 0xb7d64009 in ThreadWeaver::WorkingHardState::applyForWork (this=0x8bbe6d0, th=0x8d75e20) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WorkingHardState.cpp:74
 #10 0xb7d616d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8bc7180, th=0x8d75e20, previous=0x8dd6350) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:351
 #11 0xb7d61fbe in ThreadWeaver::ThreadRunHelper::run (this=0xa8bfe370, parent=0x8bc7180, th=0x8d75e20) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/Thread.cpp:87
 #12 0xb7d625fb in ThreadWeaver::Thread::run (this=0x8d75e20) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/Thread.cpp:142
 #13 0xb6be06ae in ?? () from /usr/lib/libQtCore.so.4
 #14 0xb57d450f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
 #15 0xb689fa0e in clone () from /lib/tls/i686/cmov/libc.so.6
Thread 3 (Thread 0xa83fdb90 (LWP 8644)):
 #0 0xb800a430 in __kernel_vsyscall ()
 #1 0xb57d8075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
 #2 0xb68adbbd in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
 #3 0xb6be16f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
 #4 0xb7d61148 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x8bc7180, th=0x8d988c8) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:365
 #5 0xb7d63eec in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x8bbe6d0, th=0x8d988c8) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WorkingHardState.cpp:80
 #6 0xb7d5fd2b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x8bc7180, th=0x8d988c8) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:356
 #7 0xb7d63fea in ThreadWeaver::WorkingHardState::applyForWork (this=0x8bbe6d0, th=0x8d988c8) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WorkingHardState.cpp:71
 #8 0xb7d616d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8bc7180, th=0x8d988c8, previous=0x8dd6830) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/WeaverImpl.cpp:351
 #9 0xb7d61fbe in ThreadWeaver::ThreadRunHelper::run (this=0xa83fd370, parent=0x8bc7180, th=0x8d988c8) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/Thread.cpp:87
 #10 0xb7d625fb in ThreadWeaver::Thread::run (this=0x8d988c8) at /build/buildd/kde4libs-4.2.1a/threadweaver/Weaver/Thread.cpp:142
 #11 0xb6be06ae in ?? () from /usr/lib/libQtCore.so.4
 #12 0xb57d450f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
 #13 0xb689fa0e in clone () from /lib/tls/i686/cmov/libc.so.6
Thread 2 (Thread 0xa7bfcb90 (LWP 15009)):
 #0 0xb800a430 in __kernel_vsyscall ()
 #1 0xb6897df1 in select () from /lib/tls/i686/cmov/libc.so.6
 #2 0xb6cb0150 in ?? () from /usr/lib/libQtCore.so.4
 #3 0xb6be06ae in ?? () from /usr/lib/libQtCore.so.4
 #4 0xb57d450f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
 #5 0xb689fa0e in clone () from /lib/tls/i686/cmov/libc.so.6
Thread 1 (Thread 0xb53aca00 (LWP 8404)):
 [KCrash Handler]
 #6 KRun::runCommand (cmd=@0xbfc0ad18, window=0x0) at /usr/include/qt4/QtCore/qatomic_i386.h:116
 #7 0xa9e7352d in ShellRunner::run (this=0x8da7ba8, context=@0x8afaaf0, match=@0x8b9a044) at /build/buildd/kdebase-workspace-4.2.1a/plasma/runners/shell/shellrunner.cpp:89
 #8 0xb7e4fb65 in Plasma::QueryMatch::run () from /usr/lib/libplasma.so.3
 #9 0xb7e5229a in Plasma::RunnerManager::run () from /usr/lib/libplasma.so.3
 #10 0xb7fa30da in ResultItem::run (this=0x8e616a8, manager=0x8afaaa0) at /build/buildd/kdebase-workspace-4.2.1a/krunner/interfaces/default/resultitem.cpp:400
 #11 0xb7fa5e1b in ResultScene::run (this=0x8c53f08, item=0x8dd6350) at /build/buildd/kdebase-workspace-4.2.1a/krunner/interfaces/default/resultscene.cpp:360
 #12 0xb7fac7c7 in Interface::run (this=0x8bb3bb8, item=0x8e616a8) at /build/buildd/kdebase-workspace-4.2.1a/krunner/interfaces/default/interface.cpp:418
 #13 0xb7facd6f in Interface::qt_metacall (this=0x8bb3bb8, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfc0af4c) at /build/buildd/kdebase-workspace-4.2.1a/obj-i486-linux-gnu/krunner/interface.moc:87
 #14 0xb6ce5a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
 #15 0xb6ce67e2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
 #16 0xb7fa5c73 in ResultScene::itemActivated (this=0x8c53f08, _t1=0x8e616a8) at /build/buildd/kdebase-workspace-4.2.1a/obj-i486-linux-gnu/krunner/resultscene.moc:119
 #17 0xb7fa7c37 in ResultScene::qt_metacall (this=0x8c53f08, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfc0b04c)
     at /build/buildd/kdebase-workspace-4.2.1a/obj-i486-linux-gnu/krunner/resultscene.moc:92
 #18 0xb6ce5a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
 #19 0xb6ce67e2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
 #20 0xb7fa2b23 in ResultItem::activated (this=0x8e616a8, _t1=0x8e616a8) at /build/buildd/kdebase-workspace-4.2.1a/obj-i486-linux-gnu/krunner/resultitem.moc:160
 #21 0xb770015f in QGraphicsItem::sceneEvent () from /usr/lib/libQtGui.so.4
 #22 0xb77437af in QGraphicsWidget::sceneEvent () from /usr/lib/libQtGui.so.4
 #23 0xb771e54c in ?? () from /usr/lib/libQtGui.so.4
 #24 0xb771e6c9 in QGraphicsScene::keyPressEvent () from /usr/lib/libQtGui.so.4
 #25 0xb7fa5f53 in ResultScene::keyPressEvent (this=0x8c53f08, keyEvent=0xbfc0badc) at /build/buildd/kdebase-workspace-4.2.1a/krunner/interfaces/default/resultscene.cpp:287
 #26 0xb7727a47 in QGraphicsScene::event () from /usr/lib/libQtGui.so.4
 #27 0xb71838ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
 #28 0xb718b72e in QApplication::notify () from /usr/lib/libQtGui.so.4
 #29 0xb7b5710d in KApplication::notify (this=0x8ae2498, receiver=0x8c53f08, event=0xbfc0badc) at /build/buildd/kde4libs-4.2.1a/kdeui/kernel/kapplication.cpp:307
 #30 0xb6cd0e61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
 #31 0xb77339fa in QGraphicsView::keyPressEvent () from /usr/lib/libQtGui.so.4
 #32 0xb71db81e in QWidget::event () from /usr/lib/libQtGui.so.4
 #33 0xb7512fd3 in QFrame::event () from /usr/lib/libQtGui.so.4
 #34 0xb75aa2ad in QAbstractScrollArea::event () from /usr/lib/libQtGui.so.4
 #35 0xb7730734 in QGraphicsView::event () from /usr/lib/libQtGui.so.4
 #36 0xb71838ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
 #37 0xb718c806 in QApplication::notify () from /usr/lib/libQtGui.so.4
 #38 0xb7b5710d in KApplication::notify (this=0x8ae2498, receiver=0x8c60e58, event=0xbfc0badc) at /build/buildd/kde4libs-4.2.1a/kdeui/kernel/kapplication.cpp:307
 #39 0xb6cd0e61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
 #40 0xb71e43de in ?? () from /usr/lib/libQtGui.so.4
 #41 0xb721abb0 in ?? () from /usr/lib/libQtGui.so.4
 #42 0xb721cd26 in ?? () from /usr/lib/libQtGui.so.4
 #43 0xb71f3af5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
 #44 0xb721e7aa in ?? () from /usr/lib/libQtGui.so.4
 #45 0xb58206f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
 #46 0xb5823da3 in ?? () from /usr/lib/libglib-2.0.so.0
 #47 0xb5823f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
 #48 0xb6cfb478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
 #49 0xb721dea5 in ?? () from /usr/lib/libQtGui.so.4
 #50 0xb6ccf52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
 #51 0xb6ccf6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
 #52 0xb6cd1da5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
 #53 0xb7183767 in QApplication::exec () from /usr/lib/libQtGui.so.4
 #54 0xb7fa2916 in kdemain (argc=1, argv=0xbfc0c644) at /build/buildd/kdebase-workspace-4.2.1a/krunner/main.cpp:59
 #55 0x08048712 in main (argc=) at /build/buildd/kdebase-workspace-4.2.1a/obj-i486-linux-gnu/krunner/krunner_dummy.cpp:3
Comment 7 David Faure 2009-03-28 01:07:32 UTC
The question is, what is the value of the string passed to KRun::runCommand...
Comment 8 David Faure 2009-03-28 01:16:47 UTC
SVN commit 945698 by dfaure:

Fix crash when KRun::runCommand("") is called. Not closing 186036 though, because doing this is a ShellRunner bug in the first place.
CCBUG: 186036


 M  +4 -0      kio/krun.cpp  
 M  +1 -0      tests/kruntest.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=945698
Comment 9 Jacopo De Simoi 2009-03-29 21:52:39 UTC
SVN commit 946618 by jacopods:

Avoid the context being reset()-ed before running the item
(not yet closing #181453 for now, even if it should be fixed - awaiting feedback)

BUG: 186036
BUG: 188186
CCBUG: 181453


 M  +3 -1      interface.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=946618
Comment 10 Jacopo De Simoi 2009-03-29 21:53:46 UTC
SVN commit 946619 by jacopods:

Avoid the context being reset()-ed before running the item
(not yet closing #181453 for now, even if it should be fixed - awaiting feedback)

CCBUG:181453
CCBUG:186036
CCBUG:188186


 M  +3 -1      interface.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=946619