Avoid the context being reset()-ed before running the item (not yet closing #181453 for now, even if it should be fixed - awaiting feedback)

BUG: 186036
BUG: 188186
CCBUG: 181453

svn path=/trunk/KDE/kdebase/workspace/; revision=946618