krunner/interfaces/default/interface.cpp
@@ -445,7 +445,6 @@ void Interface::run(ResultItem *item)
 
     kDebug() << item->name() << item->id();
     m_delayedRun = false;
-    m_searchTerm->addToHistory(m_searchTerm->currentText());
 
     if (item->group() == Plasma::QueryMatch::InformationalMatch) {
         QString info = item->data();
@@ -474,6 +473,9 @@ void Interface::run(ResultItem *item)
     close();
     m_resultsScene->run(item);
     m_running = false;
+
+    //TODO: check if run is succesful before adding the term to history
+    m_searchTerm->addToHistory(m_searchTerm->currentText());
     resetInterface();
 }
 
